--- a/css/styles.css
+++ b/css/styles.css
@@ -205,7 +205,7 @@ footer {
 
 
 .fnavlist li {
-  display: inline-block;
+  
   background: #f5f4f4;
   margin: 0;
   border: 0;
@@ -269,8 +269,11 @@ Media Queries
   /* give some space for the header from top of page */
   header h2 {
     padding-top: 1rem;
+    
 
   }
+
+
 
  
 
@@ -354,7 +357,7 @@ h3 {
   .projects { /* each item in the flexbox-main flexbox */
     flex-wrap: wrap;
     width: calc(50% - 20px);
-    margin: auto;
+    margin: 0 auto;
   }
 
   .projects img {
@@ -509,7 +512,7 @@ border: 0;
 }
 
 .header-image {
-max-width: auto;
+
 max-height: 250px;
 padding: 2px 10px;
 padding-right: 10px;
@@ -534,7 +537,7 @@ padding-bottom: 10px;
     .projects { /* each item in the flexbox-main flexbox */
       flex-wrap: wrap;
       width: calc(33.333% - 20px);
-      margin: auto;
+      margin: 0 auto;
     }
   
     .projects img {
@@ -542,15 +545,6 @@ padding-bottom: 10px;
     }
 
 
-  /* footer nav matches top nav layout (one line)*/
-
-
-
-
-
-
-
- 
 
 
 
@@ -560,4 +554,4 @@ padding-bottom: 10px;
 
 }
 
-/* Printer-Friendly Version */
+
